// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateSourceCodeAngularComponent should generate valid formatted angular component source code 1`] = `
"import { Component } from "@angular/core";

@Component({
  selector: "app-my-component-example",
  templateUrl: "./my-component-example.component.html",
})
export class MyComponentExampleComponent {
  public testArray = [1, 2, 3];

  public testObject = { foo: "bar" };

  public testFunction = () => {
    // Implementation
  };

  onTestEvent(event: Event) {
    // Handle event
    console.log(event.type);
  }
}
"
`;

exports[`generateSourceCodeAngularComponent should generate valid formatted angular component source code with children 1`] = `
"import { Component } from "@angular/core";

@Component({
  selector: "app-my-component-example",
  templateUrl: "./my-component-example.component.html",
})
export class MyComponentExampleComponent {}
"
`;

exports[`generateSourceCodeAngularHtml should generate valid formatted angular html template source code 1`] = `
"<my-component
  test-false="false"
  test-true="true"
  test-string="test-string"
  test-number="12345"
  [testArray]="testArray"
  [testObject]="testObject"
  [testFunction]="testFunction"
  (testEvent)="onTestEvent($event)"
>
  Test children
</my-component>
"
`;

exports[`generateSourceCodeAngularHtml should generate valid formatted angular html template source code with children 1`] = `
"<my-component>
  <my-child-component foo-bar="foo">
    <my-nested-child-component bar-foo="bar">
      <span class="test-class">Test children</span>
    </my-nested-child-component>
  </my-child-component>
</my-component>
"
`;
